Fix award stats field issues: - Fix meta box hide/show logic - Add new group fields button jumps to required field if it's empty   issue. - Update styles for group metabox. - Update fiscal year tooltip text and hide description.

--- a/assets/css/admin/admin-style.css
+++ b/assets/css/admin/admin-style.css
@@ -24,6 +24,6 @@ th.required::before {
 }
 
 .form-field-group-wrapper > td {
-	border: 1px solid;
+	border: 1px solid #c3c4c7;
 	display: block;
 }
